Review Request 6901 see PLS-2438 - added fallbacks for broken category/subcategory images and categories with no subcategories.  this is a stop gap until better icons are ready.

--- a/le-ui/projects/leadprioritization/app/enrichment/views/EnrichmentView.scss
+++ b/le-ui/projects/leadprioritization/app/enrichment/views/EnrichmentView.scss
@@ -499,6 +499,11 @@
                         height: 100%;
                         width: 100%;
                     }
+                    &.broken-image {
+                        img {
+                            opacity: .5;
+                        }
+                    }
                 }
                 .categories {
                     display: inline;
